Bug 72542 - desktop-shell crashes when maximizing unlock dialog
Summary: desktop-shell crashes when maximizing unlock dialog
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: 1.3.0
Hardware: Other All
: medium major
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-09 21:17 UTC by U. Artie Eoff
Modified: 2014-01-06 20:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
weston master gdb backtrace (10.18 KB, text/plain)
2013-12-09 21:17 UTC, U. Artie Eoff
Details
Weston 1.3.1 gdb backtrace (10.58 KB, text/plain)
2013-12-09 21:18 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2013-12-09 21:17:43 UTC
Created attachment 90537 [details]
weston master gdb backtrace

The weston-desktop-shell crashes when attempting to maximize the unlock dialog window.  This happens on both 1.3.1 and master.

wayland (master) heads/master-0-g1521c62
drm (master) libdrm-2.4.50-0-g4c5de72
mesa (master) heads/master-0-g0319ea9
libva (master) heads/master-0-g73a11b3
intel-driver (master) heads/master-0-g9d0bd94
weston (master) heads/master-0-g8d344a0

and

wayland (1.3) heads/1.3-0-g84247b7
drm (master) libdrm-2.4.49-0-g7ddc98f
mesa (9.2) heads/9.2-0-gebe8e9b
libva (master) libva-1.2.1-0-g88ed1eb
intel-driver (master) 1.2.1-0-g8f306e3
weston (1.3) 1.3.1-0-g5e3ff49
Comment 1 U. Artie Eoff 2013-12-09 21:18:13 UTC
Created attachment 90538 [details]
Weston 1.3.1 gdb backtrace
Comment 2 Kristian Høgsberg 2013-12-31 23:37:31 UTC
commit c152ee11e3d10b93499d9f42b00cfd57f8ad2ba4
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Tue Dec 31 15:35:39 2013 -0800

    window.c: Don't put buttons on frames for custom windows
    
    Custom windows don't have a wl_shell_surface and can't do anything in
    response to these button (except crash).  This only affects the unlock
    dialog.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=72542


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.